--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snoozUp1",
+  "name": "snoozup1",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -25,8 +25,13 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -35,5 +40,14 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "sever.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thomGeenen/snoozUp.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thomGeenen/snoozUp/issues"
+  }
 }
