--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
     "@angular/core": "5.0.3",
     "@angular/forms": "5.0.3",
     "@angular/http": "5.0.3",
+    "@angular/material": "^5.2.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
@@ -25,8 +27,10 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "angular-material": "^1.1.7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ng-circle": "^1.0.5",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
