--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "iconv-lite": "^0.4.19",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "method-override": "^2.3.10",
